--- a/web/src/App.css
+++ b/web/src/App.css
@@ -36,6 +36,14 @@
   width: 80px !important; /* Set the desired card width */
   height: auto; /* Maintain aspect ratio */
   margin-right: -40px !important; /* Adjust the overlap distance */
+  transition: transform 0.3s ease-in-out;
+  z-index: 1;
+}
+.player-area img.selected {
+  transform: translateY(-20px); /* Adjust the vertical offset as needed */
+}
+.player-area img:hover { /* Optional: visual indication on hover */
+  cursor: pointer;
 }
 
 .last{
@@ -45,31 +53,11 @@
   justify-content: center;
 }
 
-.left {
-  transform: rotate(90deg);
-  transform-origin: center;
-}
-
-.right {
-  transform: rotate(270deg);
-  transform-origin: center;
-}
-
-.top {
-  transform: rotate(180deg);
-  transform-origin: center;
-}
-
 .rotate90 {
   transform: rotate(90deg);
-  -webkit-transform: rotate(90deg); /* Safari and Chrome */
-  -moz-transform: rotate(90deg); /* Firefox */
-  -ms-transform: rotate(90deg); /* IE */
-  -o-transform: rotate(90deg); /* Opera */
 }
 
 .rotate270 {
   transform: rotate(270deg);
-  /* Add vendor prefixes as needed */
 }
 
