--- a/web/src/App.css
+++ b/web/src/App.css
@@ -58,3 +58,13 @@
   transform: rotate(270deg);
 }
 
+.buttonrow{
+  display: flex;
+  flex-direction: row;
+  margin-top: 20%;
+  justify-content: center;
+}
+
+.buttonrow button{
+  margin: 2px 10px;
+}
